# AutomatedAttendanceWebsite

./: README.md  package-lock.json  package.json  pyproject.toml
prisma/: schema.prisma
prisma/migrations/20240319140712_adding_photo_url_for_student_table/: migration.sql
prisma/migrations/20240427193233_new_class_info/: migration.sql
prisma/migrations/20240427193731_add_class_end_time/: migration.sql
src/backend/: server.py
src/components/: ActiveLink.js  ClassHeader.js  Navbar.js  StudentCard.js  StudentList.js  navbar.js
src/icons/: Divider.jsx
src/pages/: _app.js  courses.js  index.js  navbar.js  rightnow.js  students.js
src/pages/RightNow/ClassHeader/: ClassHeader.jsx
src/pages/api/: getAttendanceForMeeting.js  server.py
src/pages/course/: [classid].js
src/styles/: ClassHeader.module.css  Courses.module.css  Home.module.css  Navbar.module.css  RightNow.module.css  StudentCard.module.css  StudentList.module.css  Students.module.css  globals.css
